# iamtrans

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run_tui.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PYPI_FIRST_PUBLISH.md
scripts/: build_binary.sh  build_local.sh  publish_pypi.sh  release.sh
src/iamtrans/: __init__.py  main.py
src/iamtrans/translator/: __init__.py  engine.py
src/iamtrans/ui/: __init__.py  app.py
